# test

C++/.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
C++/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
C++/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
C++/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
C++/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.tangqiaoyandemacbook-pro_1156/: node.properties
C++/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.tangqiaoyandemacbook-pro_1156/FP.local.files_0/: node.properties
C++/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
C++/DMS/: CMakeLists.txt
C++/DMS/client/: Makefile  backup.sh  client.cpp  client.h  client.pro  client.sh  clientdlg.cpp  clientdlg.h  consolesender.cpp  data.h  logreader.cpp  logreader.h  logsender.h  main.cpp  makefile.bak  moc_clientdlg.cpp  moc_workthread.cpp  socketsender.cpp  socketsender.h  workthread.cpp  workthread.h
C++/DMS/server/: clientthread.cpp  data.h  except.h  filedao.cpp  filedao.h  logdao.h  logqueue.cpp  logqueue.h  logthread.cpp  logthread.h  main.cpp  makefile  oracledao.h  oracledao.pc  server.cpp  server.h  serversocket.cpp  serversocket.h  storethread.cpp
C++/DMS_server/: CMakeLists.txt
C++/dms_client/: client.cpp  client.h  data.h  logreader.cpp  logreader.h  logsender.cpp  logsender.h  main.cpp  socketsender.cpp  socketsender.h
python/test1/: 0302_3.py  python_webpage.html
(+1 files in other folders)
